v2.0.8
	- [Yeni] Default Middlewares desteği eklendi.
	- [Yeni] Controller içinde middleware tanımlama özelliği eklendi.
	- [Yeni] Hash kütüphanesi eklendi.
	- [Yeni] Config dosyalarındaki ayarlara erişmeyi sağlayan config() fonksiyonu eklendi.
	- [Düzeltme] input() fonksiyonunun ismi request() olarak değiştirildi.
	- [Düzeltme] Request kütüphanesinde bulunan getReferrer() ve isReferral() methodlarındaki bug giderildi.

v2.0.7
	- [Yeni] Router kütüphanesine, ip kısıtlama desteği sağlayan ip() methodu eklendi.
	- [Yeni] Router kütüphanesine, ssl desteği sağlayan ssl() methodu eklendi.
	- [Yeni] Request kütüphanesine, patch methodu ile gelen verilere erişmeyi sağlayan patch() methodu eklendi.
	- [Yeni] Request kütüphanesine, tüm request verisine erişmeyi sağlayan all() methodu eklendi.
	- [Yeni] Tüm request verisine erişmeyi sağlayan input() fonksiyonu eklendi.
	- [Yeni] URL Slug oluşturmayı sağlayan slug() fonksiyonu eklendi.
	- [Sonlandırma] Asset Kütüphanesi kaldırıldı ve desteği sonlandırıldı.

v2.0.6
	- [Yeni] Router kütüphanesine multiple request method ile rota tanımlama desteği eklendi.
	- [Yeni] Upload kütüphanesine, dosya ismi belirleyebilmek için filename() methodu eklendi.
	- [Düzeltme] Router kütüphanesindeki namespace tanımlama hatası giderildi.
	- [Düzeltme] Minimum PHP versiyon desteği 7.0.0 olarak güncellendi.

v2.0.5
	- [Yeni] Router Kütüphanesi tamamen yenilendi. Domain tanımlama desteği eklendi.
	- [Düzeltme] Import kütüphanesi içerisindeki yükleme hataları giderildi.

v2.0.4
	- [Yeni] Console desteği eklendi.
	- [Düzeltme] Validation kütüphanesindeki rules() ve bulkData() methodları iyileştirildi.
	- [Düzeltme] Request kütüphanesindeki get(), post(), put(), delete() methodlarının filtreleme özelliği varsayılan "true" olarak değiştirildi.
	- [Düzeltme] View kütüphanesine kullanılacak temayı tanımlama desteği eklendi.

v2.0.3
	- [Yeni] public_path() fonksiyonu eklendi.
	- [Yeni] File Upload kütüphanesi eklendi.